<resources>
    <string name="app_name">Loan Calculator</string>
    <string name="loan_amount_label">Loan Amount:</string>
    <string name="loan_term_years_label">Loan Term:</string>
    <string name="interest_rate_label">Interest Rate:</string>
    <string name="calculate_button">Calculate</string>
    <string name="monthly_payment">Monthly Payment:</string>
    <string name="monthlyPaymentNumber"></string>
    <string name="totalInterestCostNumber"></string>
    <string name="totalLoanCostNumber"></string>
    <string name="total_interest_cost_label">Total Interest Cost:</string>
    <string name="total_loan_cost_label">Total Loan Cost:</string>
</resources>
